ajuste tela edição de carro

--- a/src/app/pages/off/users.component.html
+++ b/src/app/pages/off/users.component.html
@@ -44,7 +44,7 @@
                                 <a class="btn btn-primary" href="#" (click)="openEdit(user)"><i class="fas fa-pen"></i></a>
                             </td>
                             <td class="cell-btn">
-                                <a class="btn" href="#" (click)="delete(user.id)"><i class="fas fa-trash"></i></a>
+                                <a class="btn btn-danger" href="#" (click)="delete(user.id)"><i class="fas fa-trash"></i></a>
                             </td>
                         </tr>
                     </tbody>
