--- a/src/app/pages/on/vehicle/form/formvehicle.component.html
+++ b/src/app/pages/on/vehicle/form/formvehicle.component.html
@@ -1,23 +1,29 @@
-<form [formGroup]="editFormVehicle" (ngSubmit)="submit()">
-    <div class="modal-header">
-        <h4 class="modal-title pull-left">Altere dados do seu carros</h4>
-        <button class="close pull-right" type="button" aria-label="Fechar" (click)="close()">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="form-group">
-        <label for="licensePlate">E-mail</label>
-        <input class="form-control" type="text" formControlName="licensePlate" />
-        <div class="validation-errors">
-            <ng-container *ngFor="let validation of errorMessages.licensePlate">
-            <div class="error-message" *ngIf="editFormVehicle.get('licensePlate').hasError(validation.type) && (editFormVehicle.get('licensePlate').dirty || editFormVehicle.get('licensePlate').touched)">
-                {{ validation.message }}
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-header">Edição do Veiculo</div>
+            <div class="card-body">
+                <form [formGroup]="editFormVehicle" (ngSubmit)="submit()">
+                    
+                    <div class="form-group">
+                        <label for="licensePlate">Placa</label>
+                        <input class="form-control" type="text" formControlName="licensePlate" />
+                        <div class="validation-errors">
+                            <ng-container *ngFor="let validation of errorMessages.licensePlate">
+                                <div class="error-message"
+                                    *ngIf="editFormVehicle.get('licensePlate').hasError(validation.type) && (editFormVehicle.get('licensePlate').dirty || editFormVehicle.get('licensePlate').touched)">
+                                    {{ validation.message }}
+                                </div>
+                            </ng-container>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-block" type="submit" [disabled]="!editFormVehicle.valid">Salvar
+                            Alterações</button>
+                </form>
+                <p class="mt-3 text-center">Deseja <a [routerLink]="['/vehicles']">Clique aqui para voltar</a>?</p>
             </div>
-            </ng-container>
         </div>
     </div>
-    <div class="modal-footer">
-        <button class="btn btn-default" type="button" (click)="close()">Fechar</button>
-        <button class="btn btn-primary" type="submit" [disabled]="!editFormVehicle.valid">Salvar Alterações</button>
-    </div>
-</form>
+    <div class="col-md-3"></div>
+</div>
